resetting dimesnion of HTML to avoid overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,9 @@
 @import url("https://fonts.googleapis.com/css?family=Sansita|Oswald");
 
 html {
+  height: 100%;
   font-size: 95%;
+  background: #000 !important;
 }
 
 body {
